--- a/demo.html
+++ b/demo.html
@@ -196,12 +196,38 @@ main{
 
 <div class="reviews">
   <div class="review-track" id="reviews">
-    <div class="review">⭐⭐⭐⭐⭐<br>“Esto parece una app.”<strong>— Carlos M.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Se siente caro.”<strong>— Andrea R.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Nada genérico.”<strong>— Luis G.</strong></div>
-    <div class="review">⭐⭐⭐⭐⭐<br>“Muy fluido.”<strong>— Miguel T.</strong></div>
+
+    <div class="review">
+      ⭐⭐⭐⭐⭐<br>
+      “Antes tenía una página, pero no daba confianza.
+      Ahora la gente se queda mirando y me escriben directo.”
+      <strong>— María Pérez</strong>
+    </div>
+
+    <div class="review">
+      ⭐⭐⭐⭐⭐<br>
+      “No parece una web normal.
+      Se siente como una aplicación bien hecha.”
+      <strong>— Williams Brandom</strong>
+    </div>
+
+    <div class="review">
+      ⭐⭐⭐⭐⭐<br>
+      “Todo se ve limpio y serio.
+      Ahora no me da pena mandar el link.”
+      <strong>— Carmen García</strong>
+    </div>
+
+    <div class="review">
+      ⭐⭐⭐⭐⭐<br>
+      “Lo que más me gustó es que no es genérico.
+      Se nota que está pensado para vender.”
+      <strong>— Diane Olazabal</strong>
+    </div>
+
   </div>
 </div>
+
 
 </main>
 
@@ -232,3 +258,4 @@ setInterval(next,4500);
 
 </body>
 </html>
+
