--- a/demo.html
+++ b/demo.html
@@ -196,38 +196,12 @@ main{
 
 <div class="reviews">
   <div class="review-track" id="reviews">
-
-    <div class="review">
-      ⭐⭐⭐⭐⭐<br>
-      “Antes tenía una página, pero no daba confianza.
-      Ahora la gente se queda mirando y me escriben directo.”
-      <strong>— María Pérez</strong>
-    </div>
-
-    <div class="review">
-      ⭐⭐⭐⭐⭐<br>
-      “No parece una web normal.
-      Se siente como una aplicación bien hecha.”
-      <strong>— Williams Brandom</strong>
-    </div>
-
-    <div class="review">
-      ⭐⭐⭐⭐⭐<br>
-      “Todo se ve limpio y serio.
-      Ahora no me da pena mandar el link.”
-      <strong>— Carmen García</strong>
-    </div>
-
-    <div class="review">
-      ⭐⭐⭐⭐⭐<br>
-      “Lo que más me gustó es que no es genérico.
-      Se nota que está pensado para vender.”
-      <strong>— Diane Olazabal</strong>
-    </div>
-
+    <div class="review">⭐⭐⭐⭐⭐<br>“Antes mi web se veía vieja. Ahora sí da confianza y me escriben más.”<strong>— María Pérez</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“No parece plantilla. Se siente como algo hecho a medida, bien limpio.”<strong>— Williams Brandom</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Me gustó que quedó clara, rápida y se ve perfecta en el teléfono.”<strong>— Carmen García</strong></div>
+    <div class="review">⭐⭐⭐⭐⭐<br>“Ahora mando mi link sin pena. La página se ve seria y profesional.”<strong>— Diane Olazabal</strong></div>
   </div>
 </div>
-
 
 </main>
 
@@ -258,4 +232,3 @@ setInterval(next,4500);
 
 </body>
 </html>
-
