--- a/demo.html
+++ b/demo.html
@@ -1,1 +1,173 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ZenSite | Demos</title>
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+
+body{
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  background:#0b0f17;
+  color:#fff;
+}
+
+/* HEADER */
+header{
+  position:sticky;
+  top:0;
+  z-index:100;
+  background:#0b0f17;
+  border-bottom:1px solid rgba(255,255,255,.08);
+  padding:14px 22px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+nav{
+  display:flex;
+  gap:20px;
+}
+nav a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:600;
+  opacity:.85;
+}
+nav a:hover{opacity:1}
+
+/* MAIN */
+main{
+  max-width:1100px;
+  margin:50px auto 100px;
+  padding:0 16px;
+  text-align:center;
+}
+
+h1{
+  font-size:clamp(28px,6vw,54px);
+  margin-bottom:30px;
+}
+
+/* SLIDER */
+.slider{
+  position:relative;
+  background:#111827;
+  border-radius:22px;
+  padding:16px;
+}
+
+/* SLIDES */
+.slides{
+  display:flex;
+  transition:transform .45s ease;
+}
+.slide{
+  min-width:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+.slide img{
+  width:100%;
+  max-width:900px;
+  max-height:70vh;
+  object-fit:contain;
+  border-radius:18px;
+  background:#000;
+}
+
+/* ARROWS */
+.arrow{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  width:42px;
+  height:42px;
+  border-radius:50%;
+  background:rgba(255,255,255,.15);
+  border:none;
+  color:#fff;
+  font-size:22px;
+  cursor:pointer;
+}
+.arrow.left{left:10px}
+.arrow.right{right:10px}
+
+/* WHATSAPP */
+.whatsapp{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  width:56px;
+  height:56px;
+  background:#25D366;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:28px;
+  color:#fff;
+  text-decoration:none;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <strong>ZenSite</strong>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demos</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Nosotros</a>
+  </nav>
+</header>
+
+<main>
+
+<h1>Demos</h1>
+
+<div class="slider">
+  <button class="arrow left" onclick="prev()">‹</button>
+
+  <div class="slides" id="slides">
+    <div class="slide"><img src="demo1.jpg" alt="Demo 1"></div>
+    <div class="slide"><img src="demo2.jpg" alt="Demo 2"></div>
+    <div class="slide"><img src="demo3.jpg" alt="Demo 3"></div>
+    <div class="slide"><img src="demo4.jpg" alt="Demo 4"></div>
+    <div class="slide"><img src="demo5.jpg" alt="Demo 5"></div>
+  </div>
+
+  <button class="arrow right" onclick="next()">›</button>
+</div>
+
+</main>
+
+<a class="whatsapp" href="https://wa.me/15027942412">💬</a>
+
+<script>
+let index=0;
+const slides=document.getElementById("slides");
+const total=5;
+
+function update(){
+  slides.style.transform=`translateX(-${index*100}%)`;
+}
+function next(){
+  index=(index+1)%total;
+  update();
+}
+function prev(){
+  index=(index-1+total)%total;
+  update();
+}
+</script>
+
+</body>
+</html>
+
 
